Keeping code compatible with Java8